<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_title_account">
        <Preference
            android:key="@string/key_view_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:textColor="?attr/textColor"
            android:title="@string/title_view_profile" />
        <Preference
            android:key="@string/key_default_number"
            android:icon="@drawable/baseline_phone_android_24"
            android:textColor="?attr/textColor"
            android:summary="@string/summary_default_number"
            android:title="@string/title_default_number" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_general">

        <ListPreference
            android:defaultValue="@string/default_app_theme"
            android:dialogTitle="@string/pref_title_app_theme"
            android:icon="@drawable/baseline_light_mode_24"
            android:entries="@array/themes"
            android:entryValues="@array/themesValues"
            android:key="@string/pref_app_theme"
            android:textColor="?attr/textColor"
            android:summary="@string/title_app_theme"
            android:title="@string/pref_title_app_theme" />

        <Preference
            android:key="@string/key_share_mypro"
            android:icon="@drawable/baseline_share_24"
            android:textColor="?attr/textColor"
            android:title="@string/title_share_mypro" />

        <Preference
            android:key="@string/key_about_mypro"
            android:icon="@drawable/baseline_info_24"
            android:textColor="?attr/textColor"
            app:isPreferenceVisible="false"
            android:title="@string/title_about_mypro" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">
        <Preference
            android:key="@string/key_send_feedback"
            android:textColor="?attr/textColor"
            android:icon="@drawable/baseline_email_24"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_safety">
        <Preference
            android:key="@string/key_privacy_policy"
            android:textColor="?attr/textColor"
            android:icon="@drawable/baseline_security_24"
            android:title="@string/title_privacy_policy" />

        <Preference
            android:key="@string/key_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/title_logout" />
    </PreferenceCategory>

</PreferenceScreen>