<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_article_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/bgColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_normal">

            <TextView
                android:id="@+id/edit_profile_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/text_size_large"
                android:paddingBottom="@dimen/margin_padding_normal"
                android:text="@string/edit_profile_instructions" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_padding_normal"
                app:hintEnabled="true"
                app:hintTextColor="?attr/textColor"
                android:textColorHint="?attr/textColor"
                android:layout_below="@id/edit_profile_instructions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_firstname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"
                    android:hint="@string/hint_first_name"
                    android:maxLines="1"
                    android:textColor="?attr/textColor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_padding_normal"
                app:hintEnabled="true"
                app:hintTextColor="?attr/textColor"
                android:textColorHint="?attr/textColor"
                android:layout_below="@id/edit_profile_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_lastname_et"
                    android:background="?attr/bgColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"
                    android:hint="@string/hint_last_name"
                    android:maxLines="1"
                    android:textColor="?attr/textColor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_normal"
                app:hintEnabled="true"
                app:hintTextColor="?attr/textColor"
                android:textColorHint="?attr/textColor"
                android:layout_below="@id/edit_profile_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:maxLines="1"
                    android:textColor="?attr/textColor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_profile_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="@dimen/margin_padding_xtiny"
                android:textSize="13sp"
                android:layout_below="@+id/edit_profile_email"/>

            <TextView
                android:id="@+id/edit_profile_image_preview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/text_size_normal"
                android:paddingTop="@dimen/margin_padding_normal"
                android:paddingBottom="@dimen/margin_padding_normal"
                android:layout_below="@id/add_profile_image_button" />

            <ImageView
                android:id="@+id/edit_profile_image_preview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/margin_padding_normal"
                android:scaleType="centerInside"
                android:layout_below="@id/edit_profile_image_preview_tv"
                app:srcCompat="@drawable/img_layer"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/profile_save_details"
                android:layout_below="@id/edit_profile_image_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_padding_normal"
                android:paddingTop="@dimen/margin_padding_normal"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/edit_profile_progress_bar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</FrameLayout>