<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:background="?attr/bgColor">

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/item_offset"
            android:text="Welcome User"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<include
            android:id="@+id/default_number_inc"
            layout="@layout/snapshot_values_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />-->

        <RelativeLayout
            android:id="@+id/default_number_inc"
            android:background="?attr/bgColor"
            android:layout_margin="@dimen/card_margin"
            app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/deposits_card_view"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                card_view:cardBackgroundColor="?attr/cardBgColor"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/deposits_snapshot_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/card_padding"
                    android:paddingStart="@dimen/card_padding"
                    android:paddingEnd="@dimen/card_padding"
                    android:paddingRight="@dimen/card_padding">
                    <TextView
                        android:id="@+id/deposits_snapshot_value"
                        android:text="077652369"
                        android:paddingTop="@dimen/item_offset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_padding"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/deposits_snapshot_title"
                        android:text="Total Deposits"
                        android:layout_below="@id/deposits_snapshot_value"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="@dimen/item_offset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textColor"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:lines="1"
                        android:textSize="18sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/withdraws_card_view"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                card_view:cardBackgroundColor="?attr/cardBgColor"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/withdraws_snapshot_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/card_padding"
                    android:paddingStart="@dimen/card_padding"
                    android:paddingEnd="@dimen/card_padding"
                    android:paddingRight="@dimen/card_padding">
                    <TextView
                        android:id="@+id/withdraws_snapshot_value"
                        android:text="077652369"
                        android:paddingTop="@dimen/item_offset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_padding"
                        android:textColor="?attr/textColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/withdraws_snapshot_title"
                        android:text="Total Withdraws"
                        android:layout_below="@id/withdraws_snapshot_value"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="@dimen/item_offset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textColor"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:lines="1"
                        android:textSize="18sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/home_transactions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/item_offset"
            android:text="@string/home_trx_title"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_number_inc" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/daily_trxs_bar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_transactions_title" />

        <TextView
            android:id="@+id/home_cat_usage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/item_offset"
            android:text="@string/home_cat_usage_title"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_trxs_bar" />

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/category_pieChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_cat_usage_title"/>

        <TextView
            android:id="@+id/home_service_usage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/item_offset"
            android:text="@string/home_serv_usage_title"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_pieChart" />

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/service_pieChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_service_usage_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>